# Heimdal-Drone-project

./: README.md
drone_sim/: CMakeLists.txt  package.xml
drone_sim/config/: gz_bridge.yaml  mavros_plugins.yaml  zephyr_cam.yaml  zephyr_imu.yaml
drone_sim/launch/: launch.py
drone_sim/models/zephyr_delta_wing/: model.sdf
drone_sim/urdf/: zephyr_delta_wing.xacro
drone_sim/worlds/: empty.world
nav_pkg/: CMakeLists.txt  package.xml
nav_pkg/launch/: nav_zephyr.launch.py
nav_pkg/src/: rtabmap_nav.cpp
